# WikipediaCardCollection

./: .gitignore  README.md  build.bat  cards.db  gradient_tilemode.py  pyproject.toml  sortie_info.json  start.bat
scripts/: check_import.py
src/: achievements.py  achievements_master.csv  battle.py  enemy_master_data.json  gacha.py  main.py  master_data.json  mockbattle.py  powerup.py  setting.py  sortie.py  stage_data.json  test.py  zukan.py
src/gacha/: gacha.py
src/utils/: db.py  manage_settings.py  ui.py  utils.py  webapi.py
src/zukan/: zukan.py
