[project]
name = "Wikipedia Card Collection"
version = "0.2.0"
description = "Wikigachaもどきのデスクトップアプリ"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "yosxpeee", email = "yosxpeee@gmail.com" }
]
dependencies = [
    "flet>=0.83.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.83.0",
    "flet-desktop>=0.83.0",
    "flet-web>=0.83.0",
]

[tool.flet]
org = "https://github.com/yosxpeee"
product = "Wikipedia Card Collection"
company = "yosxpeee"
copyright = "Copyright (C) 2026 by yosxpeee"

[tool.flet.app]
path = "src"
